--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ var WTF = (function() {
     var RE_JSON = /\.json$/i;
     var RE_COL = /^gsx\$(.+)$/i;
     var RE_KEY = /[a-z0-9_-]{32,}/i;
-    var DOCS_PATH = "https://spreadsheets.google.com/feeds/list/{key}/1/public/values?alt=json";
+    var DOCS_PATH = "https://docs.google.com/spreadsheets/u/0/d/{key}/pub/values?alt=json";
 
 
     var templates;
